[package]
name = "tzf_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
rustler = { version = "0.37.0", features = ["nif_version_2_17"] }
tzf-rs = { version = "1.0.0", default-features = false }

[features]
default = ["nif_version_2_17"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
